<resources>
    <string name="app_name">NutriCoach</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_items">Items</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="calories">%1$d Calories</string>
    <string name="recipe">Recipe</string>
    <string name="ingredient">Ingredient</string>
    <string name="search">Search</string>
    <string name="input">Beans</string>
    <string name="label">Item:</string>
    <string name="save">Save</string>
    <string name="saveDescription">Save</string>
    <string name="weight">100</string>
    <string name="camera_rationale">To scan food, permission for the camera is required</string>
    <string name="no_permission_text">Camera permission was not granted</string>
    <string name="pre_model_text">This looks like</string>
    <string name="user_age">Age</string>
    <string name="user_weight">Weight (in kg)</string>
    <string name="user_height">Height (in cm)</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_other">Other</string>
    <string name="calculate_amp_save"><![CDATA[Calculate & Save]]></string>
    <string name="activity_level_text">Activity Level:</string>
    <string name="caloric_demand">Caloric demand: %1$d kcal</string>
    <string name="enter_food">Enter food</string>
    <string name="this_looks_like">This looks like</string>
</resources>