<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_add_black"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_list_black"
        android:title="@string/title_items" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera_black"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/title_settings" />

</menu>